[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/PlayerShip/PlayerShip.png" type="Texture" id=1]
[ext_resource path="res://Assets/PlayerShip/PlayerShip.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 640, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 512, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 256, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 384, 0, 128, 128 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "MovementLowHealth",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ) ],
"loop": true,
"name": "IdleLowHealth",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ SubResource( 4 ) ],
"loop": true,
"name": "Movement",
"speed": 5.0
} ]

[node name="PlayerShip" type="Node2D"]

[node name="PlayerShip" type="KinematicBody2D" parent="."]
collision_layer = 2
collision_mask = 2147483650
script = ExtResource( 2 )

[node name="PlayerShipSprite" type="AnimatedSprite" parent="PlayerShip"]
rotation = 1.5708
frames = SubResource( 5 )
animation = "Idle"

[node name="LaserCooldown" type="Timer" parent="PlayerShip"]
wait_time = 0.1
autostart = true

[node name="MissileCooldown" type="Timer" parent="PlayerShip"]
wait_time = 2.0
autostart = true

[node name="Gun1" type="Position2D" parent="PlayerShip"]
position = Vector2( 51, -13 )

[node name="Gun2" type="Position2D" parent="PlayerShip"]
position = Vector2( 51, 13 )

[node name="AreaBody" type="Area2D" parent="PlayerShip"]
collision_layer = 5
collision_mask = 2147483653

[node name="PlayerShipCollisionPolygon2D" type="CollisionPolygon2D" parent="PlayerShip/AreaBody"]
rotation = 1.5708
polygon = PoolVector2Array( 5, -63, 6, -62, 7, -60, 8, -57, 9, -52, 11, -51, 15, -51, 15, -44, 14, -43, 12, -42, 11, -42, 14, -25, 15, -20, 16, -15, 17, -12, 24, 2, 24, 4, 28, 4, 32, 5, 33, 10, 51, 28, 55, 33, 58, 37, 63, 47, 63, 52, 62, 52, 51, 42, 45, 39, 41, 38, 41, 37, 33, 38, 33, 42, 22, 42, 13, 45, 12, 46, 11, 50, 10, 50, 10, 51, 8, 51, 8, 54, 4, 58, -4, 58, -8, 54, -8, 51, -10, 51, -10, 50, -11, 50, -12, 46, -13, 45, -22, 42, -33, 42, -33, 38, -32, 38, -32, 37, -41, 37, -41, 38, -47, 40, -53, 44, -62, 52, -63, 52, -63, 47, -58, 37, -55, 33, -51, 28, -33, 10, -32, 5, -28, 4, -24, 4, -24, 2, -17, -12, -16, -15, -15, -20, -14, -25, -11, -42, -12, -42, -14, -43, -15, -44, -15, -51, -11, -51, -9, -52, -8, -57, -7, -60, -6, -62, -5, -63, -3, -64, 3, -64 )

[node name="LifeTime" type="Timer" parent="."]
autostart = true
[connection signal="timeout" from="PlayerShip/LaserCooldown" to="PlayerShip" method="_on_LaserCooldown_timeout"]
[connection signal="timeout" from="PlayerShip/MissileCooldown" to="PlayerShip" method="_on_LaserCooldown_timeout"]
[connection signal="timeout" from="PlayerShip/MissileCooldown" to="PlayerShip" method="_on_MissileCooldown_timeout"]
[connection signal="area_entered" from="PlayerShip/AreaBody" to="PlayerShip" method="_on_AreaBody_area_entered"]
[connection signal="body_shape_entered" from="PlayerShip/AreaBody" to="PlayerShip" method="_on_AreaBody_body_shape_entered"]
[connection signal="timeout" from="LifeTime" to="PlayerShip" method="_on_LifeTime_timeout"]
